# tf-titanic

./: CMakeLists.txt  README.md  titanic-model.tflite
main/: CMakeLists.txt  main.cc  main.cpp  output_handler.h  titanic_model.cc  titanic_model.h
